--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:Lj+/XvtIa44DxjhicwfMPTddPD6zQN8oQPq2ZTrb2CQ=
 APP_DEBUG=false
-APP_URL=https://api.milestoneducation.com
+APP_URL=http://www.milestoneeducom.com
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=milestone
-DB_USERNAME=forge
-DB_PASSWORD=TJXngbxIn58m951V8JkG
+DB_DATABASE=milestone_educom
+DB_USERNAME=root
+DB_PASSWORD=krunal@1987
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
